--- a/index.html
+++ b/index.html
@@ -16,15 +16,21 @@
 </head>
 <body onload="checkPassword()">
     <div id="content" style="display:none; text-align: center;">
-        <h2>Rapport 1 - Royal Distribution</h2>
+        <h2>Rapport 1 - Analyse du stock</h2>
         <iframe style="width: 100%; height: 90vh;" 
                 src="https://app.powerbi.com/reportEmbed?reportId=b3d35a45-3ae5-41b4-ab4d-be6c85f1476d&autoAuth=true&ctid=296fa80e-7707-4c5d-97c2-60d76a1081c5" 
                 frameborder="0" allowfullscreen></iframe>
 
-        <h2>Rapport 2 - Analyse Ventes</h2>
+        <h2>Rapport 2 - Depreciation de stock</h2>
         <iframe style="width: 100%; height: 90vh;" 
                 src="https://app.powerbi.com/reportEmbed?reportId=0ea0e042-ef3b-4bb1-bb82-126123eb3999&autoAuth=true&ctid=296fa80e-7707-4c5d-97c2-60d76a1081c5" 
                 frameborder="0" allowfullscreen></iframe>
+
+        <h2>Rapport 3 - Analyse du CA</h2>
+        <iframe style="width: 100%; height: 90vh;" 
+                src="https://app.powerbi.com/reportEmbed?reportId=d07ba249-7981-4e2a-abf6-b5eb4ed0b6d9&autoAuth=true&ctid=296fa80e-7707-4c5d-97c2-60d76a1081c5" 
+                frameborder="0" allowfullscreen></iframe>
+
     </div>
 </body>
 </html>
